<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:padding="@dimen/_2sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_320sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bg_dialog_with_rounded_corners"
        android:paddingBottom="@dimen/_3sdp">

        <ImageView
            android:id="@+id/dialog_decline_button"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/rounded_primary_dark"
            android:src="@drawable/ic_dialog_close_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/dialog_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@color/white"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/cash_payment_dialog_heading"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:id="@+id/rl_total_payment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@id/dialog_header"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:id="@+id/total_amount_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/total_amount_heading"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/total_amount_heading"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_minimum_payment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@id/rl_total_payment">

                <TextView
                    android:id="@+id/minimum_payment_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/minimum_payment_heading"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_minimum_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/minimum_payment_heading"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/rg_payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_minimum_payment"
                android:layout_marginTop="@dimen/_10sdp"
                android:checkedButton="@id/rb_full_pay"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_full_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/full_payment_radio_heading"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <RadioButton
                    android:id="@+id/rb_partial_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/minimum_payment_radio_heading"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/ly_enter_amount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@id/rg_payment_type"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="$"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/ed_total_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_enter_amount"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <View
                android:id="@+id/dialog_view"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/ly_enter_amount"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/btn_pay"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_primary"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/cash_payment_done_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_circle"
        android:elevation="@dimen/_2sdp"
        android:gravity="center">

        <ImageView
            android:id="@+id/cash_cheque_dialog_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="@dimen/_20sdp"
            android:src="@drawable/currency" />
    </RelativeLayout>

</RelativeLayout>