<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:padding="@dimen/_2sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bg_dialog_with_rounded_corners"
        android:paddingBottom="@dimen/_4sdp">

        <TextView
            android:id="@+id/dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_65sdp"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/start_route_to_the_pit_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <View
            android:id="@+id/dialog_view"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_above="@id/ly_dialog_menu"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ly_dialog_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/start_route_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/start_now_btn_text"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/dialog_header"
                android:layout_gravity="center"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/remember_me_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/remember_me_btn_text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_circle"
        android:elevation="@dimen/_2sdp"
        android:gravity="center">

        <ImageView
            android:id="@+id/interest_decline_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/app_icon" />
    </RelativeLayout>

</RelativeLayout>