<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dng.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomMenu"
        android:layout_marginBottom="0.5dp" />

    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_tab_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerInParent="true"
            android:weightSum="4">


            <LinearLayout
                android:id="@+id/ly_new_task"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_newtask_tab"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/active_new_task" />

                <TextView
                    android:id="@+id/tv_newtask_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/new_task_heading"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_history_tab"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/history" />

                <TextView
                    android:id="@+id/tv_history_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/history_heading"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iv_manager_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/manager" />

                <TextView
                    android:id="@+id/tv_manager_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/manager_heading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ly_logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_setting_tab"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/settings" />

                <TextView
                    android:id="@+id/tv_setting_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/settings_heading"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />

</RelativeLayout>
